# organic-growth

./: .gitignore  README.md  main.c
sources/: constants.h  plant_system.cpp  plant_system.h
sprouts/plant-generator/: CMakeLists.txt
sprouts/plant-generator-OOP/: CMakeLists.txt
sprouts/plant-generator-OOP/sources/: constants.h  flower.cpp  main.cpp
sprouts/plant-generator-c/: main.c
sprouts/plant-generator/sources/: constants.h  flower.cpp  flower.h  main.cpp  plant_system.cpp  plant_system.h
